welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:22: error: not enough arguments for method apply: (i: Int)java.awt.Color in class Array.
Unspecified value parameter i.
      colore(tab())
                ^